make bugs absolute + fix script overlap + dont set style in js if not necessary

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -6820,6 +6820,10 @@ div.markdown {
 
 .bug {
 	pointer-events: none !important;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9999999;
 }
 
 @media (min-width: 768px) {
